# C-BLOG

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  nginx.conf  nginx.local.conf
config/: config.json  config.local.json
react/: auto-imports.d.ts  config.json  package.json  vite.config.ts
react/src/: App.tsx  index.css  vite-env.d.ts
react/src/components/: BlogCard.tsx  GlassBackground.tsx  MainLayout.tsx  Navbar.tsx  ThemeProvider.tsx  TimeAwareTheme.tsx
react/src/lib/: api.ts
react/src/pages/: Admin.tsx  Explore.tsx  Home.tsx  Index.tsx  Login.tsx  NotFound.tsx  Notifications.tsx  Post.tsx  Profile.tsx  SearchPage.tsx  Settings.tsx  Write.tsx
res/: CMakeLists.txt  nginx.conf  start.bat
res/react/: index.html
res/react/src/: main.tsx
res/react/src/components/: AuthProvider.tsx  BlogCard.tsx  GlassBackground.tsx  ProtectedRoute.tsx
res/react/src/pages/: Admin.tsx  Explore.tsx  NotFound.tsx  Notifications.tsx  Write.tsx
res/sql/: schema.sql
res/src/: main.cpp
res/src/controllers/: admin_controller.cpp  admin_controller.h  comment_controller.cpp  post_controller.h  search_controller.cpp  tag_controller.cpp  tag_controller.h
res/src/dao/: comment_dao.h  contact_dao.h  notification_dao.cpp  notification_dao.h  post_dao.cpp  search_dao.cpp  search_dao.h  tag_dao.h
res/src/db/: database.cpp  database.h  mysql_pool.cpp  mysql_pool.h  redis_pool.cpp
res/src/middleware/: cors_middleware.cpp  rate_limiter.cpp
res/src/models/: post.cpp  tag.cpp  user.cpp
res/src/server/: router.h  server.cpp  session.cpp  session.h
res/src/services/: auth_service.cpp  post_service.cpp  post_service.h
res/src/utils/: config.cpp  logger.cpp  password.cpp  response.h
source/frontend-source/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
source/frontend-source/src/: App.tsx  index.css
source/frontend-source/src/components/auth/: AuthProvider.tsx  ProtectedRoute.tsx
source/frontend-source/src/components/blog/: BlogCard.tsx
source/frontend-source/src/components/layout/: GlassBackground.tsx  MainLayout.tsx  Navbar.tsx
source/frontend-source/src/components/theme/: ThemeProvider.tsx
source/frontend-source/src/lib/: api.ts
source/frontend-source/src/pages/: Admin.tsx  Explore.tsx  Home.tsx  Login.tsx  Notifications.tsx  Post.tsx  Profile.tsx  SearchPage.tsx  Settings.tsx  Write.tsx
sql/: schema.sql  seed.sql
src/: main.cpp
src/controllers/: admin_controller.cpp  auth_controller.cpp  auth_controller.h  comment_controller.cpp  comment_controller.h  contact_controller.cpp  contact_controller.h  notification_controller.cpp  notification_controller.h  post_controller.cpp  search_controller.cpp  search_controller.h  tag_controller.cpp  tag_controller.h
src/dao/: comment_dao.cpp  contact_dao.cpp  notification_dao.cpp  post_dao.h  tag_dao.cpp  tag_dao.h  user_dao.cpp  user_dao.h
src/db/: database.cpp  mysql_pool.cpp  mysql_pool.h  redis_pool.cpp  redis_pool.h
src/middleware/: auth_middleware.cpp  auth_middleware.h  cors_middleware.cpp  cors_middleware.h  rate_limiter.cpp  rate_limiter.h
src/models/: comment.cpp  comment.h  post.h  tag.h  user.h
src/server/: router.cpp  router.h  server.cpp  server.h  session.cpp  session.h
src/services/: auth_service.cpp  auth_service.h  markdown_service.cpp  markdown_service.h  post_service.cpp  post_service.h  search_service.cpp  search_service.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h  mysqlx_helper.h  password.cpp  password.h  response.cpp  response.h  sanitize.h
(+2 files in other folders)
